fix(vistas): Collections y TVenta